--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body, html {
     font-family: Arial, sans-serif;
     color: white;
     overflow: hidden; /* Убираем прокрутку */
+    background-color: #050d1f; /* Заливаем бекграунд */
 }
 
 .background {
@@ -13,20 +14,16 @@ body, html {
     width: 100%;
     height: 100%;
     z-index: -1;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #bg-video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    max-width: 100%;
+    max-height: 100%;
     z-index: -1;
-    transform: translate(-50%, -50%);
-    background-size: cover;
+    background-color: #050d1f;
 }
 
 .translucent-box {
