--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,18 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #050d1f; /* Заливаем бекграунд */
 }
 
 #bg-video {
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     z-index: -1;
     background-color: #050d1f;
 }
