--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,48 @@ code {
     white-space: pre-wrap;
 }
 
+a {
+    color: inherit;
+    text-decoration: none; /* Убираем подчеркивание */
+}
+
+a:hover {
+    text-decoration: underline; /* Подчеркивание при наведении */
+}
+
+.terminal-text {
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
+}
+
+.terminal-text.yellow {
+    color: #ffff00;
+}
+
+.terminal-text.red {
+    color: #ff0000;
+}
+
+.terminal-text.green {
+    color: #00ff00;
+}
+
+.messenger-icons {
+    display: flex;
+    justify-content: space-around;
+   
+}
+
+.messenger-icon {
+    font-size: 24px;
+    color: #00ff00; /* Зеленый цвет иконок */
+}
+
+.messenger-icon:hover {
+    color: #ff0000; /* Красный цвет при наведении */
+}
+
 @media (max-width: 768px) {
     .large-box {
         flex-direction: column;
