--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a:hover {
 .messenger-icons {
     display: flex;
     justify-content: space-around;
-   
+    padding-top: 5px; /* Уменьшаем верхний отступ */
 }
 
 .messenger-icon {
