--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,14 @@ a:hover {
     color: #00ff00;
 }
 
+.yellow-text {
+    color: #ffff00; /* Желтый цвет для первого столбца */
+}
+
+.green-text {
+    color: #00ff00; /* Зеленый цвет для второго столбца */
+}
+
 .messenger-icons {
     display: flex;
     justify-content: space-around;
@@ -132,22 +140,6 @@ a:hover {
 
 .messenger-icon:hover {
     color: #ff0000; /* Красный цвет при наведении */
-}
-
-.status-indicator {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-left: 10px;
-}
-
-.green {
-    background-color: green;
-}
-
-.gray {
-    background-color: gray;
 }
 
 .sync-status {
