--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body, html {
 
 .box-title {
     color: #800080; /* Фиолетовый цвет заголовков */
+    text-align: left; /* Выравниваем заголовок влево */
 }
 
 .logo-part1 {
