--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body, html {
 
 .large-box {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; /* Выравнивание заголовка влево */
     align-items: center;
     flex-direction: column; /* Добавлено для вертикального выравнивания */
     height: 200px;
